test/param/ferguson/field-name-wrong2.good
field-name-wrong2.chpl:8: error: field y not found in R
